# backend-SIBP

./: .dockerignore  .env.example  Dockerfile  db.sqlite3  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
APP_SIBP/: asgi.py  settings.py  urls.py  wsgi.py
app_base/: mixins.py
app_events/: models.py  serializers.py  urls.py  views.py
app_events/migrations/: 0001_initial.py
